--- a/EnazaGamesTask/appsettings.json
+++ b/EnazaGamesTask/appsettings.json
@@ -6,5 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Default": "Server=(local);Database=enazaGames;Integrated Security=false;User ID=sa;Password=1;"
+  },
+  "AuthOptions": {
+    "Issuer": "NucleusAPI",
+    "Audience": "NucleusClient",
+    "Key": "d72e52de-2e90-42h9-g80a-34cc91a29162",
+    "Lifetime": 10
+  },
+  "PasswordOptions": {
+    "RequiredLength": 6,
+    "RequireLowercase": true,
+    "RequireUppercase": true,
+    "RequireNonAlphanumeric": true,
+    "RequireDigit": true,
+    "RequiredUniqueChars": 0
+  }
 }
