--- a/EnazaGamesTask/appsettings.Development.json
+++ b/EnazaGamesTask/appsettings.Development.json
@@ -5,5 +5,22 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=(local);Database=enazaGames;Integrated Security=false;User ID=sa;Password=1;"
+  },
+  "AuthOptions": {
+    "Issuer": "NucleusAPI",
+    "Audience": "NucleusClient",
+    "Key": "d72e52de-2e90-42h9-g80a-34cc91a29162",
+    "Lifetime": 10
+  },
+  "PasswordOptions": {
+    "RequiredLength": 6,
+    "RequireLowercase": true,
+    "RequireUppercase": true,
+    "RequireNonAlphanumeric": true,
+    "RequireDigit": true,
+    "RequiredUniqueChars": 0
   }
 }
