--- a/EnazaGamesTask/EnazaGamesTask.csproj
+++ b/EnazaGamesTask/EnazaGamesTask.csproj
@@ -12,9 +12,11 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.2" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BLL\BLL.csproj" />
       <ProjectReference Include="..\DAL\DAL.csproj" />
       <ProjectReference Include="..\Models\Models.csproj" />
     </ItemGroup>
