--- a/EnazaGamesTask/appsettings.json
+++ b/EnazaGamesTask/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=(local);Database=enazaGames;Integrated Security=false;User ID=sa;Password=1;"
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=enazaGames;Trusted_Connection=True;"
   },
   "AuthOptions": {
     "Issuer": "NucleusAPI",
