--- a/EnazaGamesTask/appsettings.json
+++ b/EnazaGamesTask/appsettings.json
@@ -10,8 +10,8 @@
     "Default": "Server=(localdb)\\mssqllocaldb;Database=enazaGames;Trusted_Connection=True;"
   },
   "AuthOptions": {
-    "Issuer": "NucleusAPI",
-    "Audience": "NucleusClient",
+    "Issuer": "EnazaGamesAPI",
+    "Audience": "EnazaGamesClient",
     "Key": "d72e52de-2e90-42h9-g80a-34cc91a29162",
     "Lifetime": 10
   },
